# ghent-data-charts

./: .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  basechartwidget.cpp  basechartwidget.hpp  citypopulationchart.cpp  citypopulationchart.hpp  dbservice.cpp  dbservice.hpp  districtpopulationdensitychart.cpp  districtpopulationdensitychart.hpp  districtpopulationsizechart.cpp  districtpopulationsizechart.hpp  main.cpp  mainwidget.cpp  mainwidget.hpp  model.cpp  model.hpp
